--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "body-parser": "^1.14.1",
-    "chai": "^3.4.1",
+    "chai": "^3.4.1"
+  },
+  "dependencies": {
+    "dotenv": "^1.2.0",
+    "express-session": "^1.12.1",
+    "lodash": "^3.10.1",
+    "node-yelp": "0.0.3",
+    "querystring": "^0.2.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
     "hbs": "^4.0.0",
@@ -22,14 +28,8 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
-    "request": "^2.67.0"
-  },
-  "dependencies": {
-    "dotenv": "^1.2.0",
-    "express-session": "^1.12.1",
-    "lodash": "^3.10.1",
-    "node-yelp": "0.0.3",
-    "querystring": "^0.2.0"
+    "request": "^2.67.0",
+    "body-parser": "^1.14.1"
   },
   "scripts": {
     "start": "node server.js"
