--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "author": "",
@@ -13,27 +12,23 @@
     "chai": "^3.4.1"
   },
   "dependencies": {
-    "dotenv": "^1.2.0",
-    "express-session": "^1.12.1",
-    "lodash": "^3.10.1",
-    "node-yelp": "0.0.3",
-    "querystring": "^0.2.0",
+    "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "express-flash": "0.0.2",
+    "express-session": "^1.12.1",
     "hbs": "^4.0.0",
+    "lodash": "^3.10.1",
     "mocha": "^2.3.4",
     "mongoose": "^4.2.7",
+    "node-yelp": "0.0.3",
     "nonce": "^1.0.3",
     "oauth-signature": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^3.1.0",
-    "request": "^2.67.0",
-    "body-parser": "^1.14.1"
-  },
-  "scripts": {
-    "start": "node server.js"
+    "querystring": "^0.2.0",
+    "request": "^2.67.0"
   }
-
-  
 }
