--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "chai": "^3.4.1"
+    
   },
   "dependencies": {
     "body-parser": "^1.14.1",
+    "chai": "^3.4.1",
     "cookie-parser": "^1.4.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
@@ -30,5 +31,6 @@
     "passport-local-mongoose": "^3.1.0",
     "querystring": "^0.2.0",
     "request": "^2.67.0"
+    "chai": "^3.4.1"
   }
 }
